--- a/data_processing/Validation.ipynb
+++ b/data_processing/Validation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7f20cdfeb314f48a8670c3a1c70ccad4e4ce70c79abd95ed484cc0808a4ddbda"
+  "signature": "sha256:205e89710393df356460ad7f2beee274236d54271ac7e35d7bc3e86eb49e8f67"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -53,7 +53,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 170
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -218,19 +218,11 @@
        "stream": "stdout",
        "text": [
         " 1177 3981 ...\n",
-        "Calculating similarity score...\n",
-        "1177"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 1177\n"
+        "Calculating similarity score...\n"
        ]
       }
      ],
-     "prompt_number": 200
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
